--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -1,5 +1,10 @@
 $vaalea-bg: #ece5e5;
 $tumma-bg: #393838;
+$prim-purple: #bb86fc;
+$prim-green: #03dac5;
+$prim-blue: #3700b3;
+$prim-pink: #ff7597;
+$prim-red: #ff0266;
 
 @mixin vaalea-varjo-koholla {
 	border-radius: 50px;
@@ -25,11 +30,46 @@ $tumma-bg: #393838;
 	box-shadow: inset 20px 20px 60px #303030, inset -20px -20px 60px #424040;
 }
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
 	background: $vaalea-bg;
 	color: $tumma-bg;
+	font-family: 'Montserrat', sans-serif;
 }
 body.tumma {
 	background: $tumma-bg;
 	color: rgba($color: #ffffff, $alpha: 0.6);
+}
+
+.container {
+	text-align: center;
+}
+
+a {
+	text-decoration: none;
+	color: $prim-green;
+}
+
+header {
+	height: 100vh;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+	background-image: url("/img/kansi.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+
+	h1 {
+		top: 100px;
+		font-size: 3rem;
+		padding: 50px;
+		background: $tumma-bg;
+		color: $prim-red;
+		border-radius: 20%;
+	}
 }
