--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -6,13 +6,13 @@
 }
 
 body {
-  background: #ece5e5;
-  color: #393838;
+  background: whitesmoke;
+  color: black;
   font-family: 'Montserrat', sans-serif;
 }
 
 body.tumma {
-  background: #393838;
+  background: black;
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -26,28 +26,231 @@ a {
 }
 
 header {
-  height: 100vh;
+  margin-top: 20px;
+  height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url("/img/kansi.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
 
-header h1 {
-  top: 100px;
-  font-size: 3rem;
-  padding: 50px;
-  background: #393838;
+header img {
+  width: 50px;
+  margin: 30px;
+}
+
+header h2 {
+  font-weight: 700;
+}
+
+header #mode {
+  margin-right: 40px;
+  padding: 20px;
+  border-radius: 50%;
+  background-color: #bb86fc;
+}
+
+.kortti {
+  height: 90vh;
+}
+
+.card-group {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
+}
+
+.card {
+  position: relative;
+  height: 189px;
+  width: 315px;
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  /* This will produce the blur */
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.logo img,
+.chip img,
+.number,
+.name,
+.from,
+.to,
+.ring {
+  position: absolute;
+  /* All items inside card should have absolute position */
+}
+
+.logo img {
+  top: 35px;
+  right: 40px;
+  width: 80px;
+  height: auto;
+  opacity: 0.8;
+}
+
+.chip img {
+  top: 84px;
+  left: 28px;
+  width: 35px;
+  height: auto;
+  opacity: 0.8;
+}
+
+.number,
+.name,
+.from,
+.to {
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+}
+
+.number {
+  left: 28px;
+  bottom: 46px;
+  font-family: "Nunito", sans-serif;
+}
+
+.name {
+  font-size: 0.7rem;
+  left: 28px;
+  bottom: 25px;
+}
+
+.from {
+  font-size: 0.5rem;
+  bottom: 25px;
+  right: 77px;
+}
+
+.to {
+  font-size: 0.5rem;
+  bottom: 25px;
+  right: 28px;
+}
+
+section {
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+section h2 {
+  margin-bottom: 20px;
+}
+
+section i {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  color: #03dac5;
+}
+
+section p {
+  margin-bottom: 10px;
+}
+
+section a {
+  margin-bottom: 10px;
+}
+
+section.tumma i {
   color: #ff0266;
-  border-radius: 20%;
+}
+
+footer {
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 900px) {
+  .card {
+    position: relative;
+    height: 270px;
+    width: 450px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, 0.2);
+    -webkit-backdrop-filter: blur(30px);
+            backdrop-filter: blur(30px);
+    /* This will produce the blur */
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 80px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+  }
+  .logo img,
+  .chip img,
+  .number,
+  .name,
+  .from,
+  .to,
+  .ring {
+    position: absolute;
+    /* All items inside card should have absolute position */
+  }
+  .logo img {
+    top: 35px;
+    right: 40px;
+    width: 80px;
+    height: auto;
+    opacity: 0.8;
+  }
+  .chip img {
+    top: 120px;
+    left: 40px;
+    width: 50px;
+    height: auto;
+    opacity: 0.8;
+  }
+  .number,
+  .name,
+  .from,
+  .to {
+    color: rgba(255, 255, 255, 0.8);
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+  }
+  .number {
+    left: 40px;
+    bottom: 65px;
+    font-family: "Nunito", sans-serif;
+  }
+  .name {
+    font-size: 0.5rem;
+    left: 40px;
+    bottom: 35px;
+  }
+  .from {
+    font-size: 0.5rem;
+    bottom: 35px;
+    right: 110px;
+  }
+  .to {
+    font-size: 0.5rem;
+    bottom: 35px;
+    right: 40px;
+  }
 }
 /*# sourceMappingURL=tyyli.css.map */
