--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -66,6 +66,13 @@ header {
 		background-color: $prim-purple;
 	}
 }
+.pörssi {
+	background-color: $prim-green;
+	width: 100px;
+	height: 100px;
+	color: pink;
+	border-radius: 50%;
+}
 .kortti {
 	height: 90vh;
 }
@@ -234,7 +241,7 @@ footer {
 	}
 
 	.name {
-		font-size: 0.5rem;
+		font-size: 0.7rem;
 		left: 40px;
 		bottom: 35px;
 	}
