grid ja kartta lisätty

--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -10,11 +10,8 @@ body {
   background: whitesmoke;
   color: black;
   font-family: 'Montserrat', sans-serif;
-}
-
-body.tumma {
-  background: black;
-  color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .container {
@@ -42,7 +39,6 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url("/img/kansi.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -63,22 +59,86 @@ header #mode {
   background-color: #bb86fc;
 }
 
-.pörssi {
-  background-color: #03dac5;
-  width: 100px;
-  height: 100px;
-  color: pink;
-  border-radius: 50%;
+/* kytkin */
+.label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  color: #394a56;
 }
 
+.label-text {
+  margin-left: 16px;
+}
+
+.toggle {
+  isolation: isolate;
+  position: relative;
+  height: 30px;
+  width: 60px;
+  border-radius: 15px;
+  overflow: hidden;
+  -webkit-box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+          box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+}
+
+.toggle-state {
+  display: none;
+}
+
+.indicator {
+  height: 100%;
+  width: 200%;
+  background: #03dac5;
+  border-radius: 15px;
+  -webkit-transform: translate3d(-75%, 0, 0);
+          transform: translate3d(-75%, 0, 0);
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35), -webkit-transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  -webkit-box-shadow: -2px -2px 8px 0px #039485, 4px 4px 12px 0px #029687;
+          box-shadow: -2px -2px 8px 0px #039485, 4px 4px 12px 0px #029687;
+}
+
+.toggle-state:checked ~ .indicator {
+  -webkit-transform: translate3d(25%, 0, 0);
+          transform: translate3d(25%, 0, 0);
+}
+
+/* Visa kortti */
 .kortti {
   height: 90vh;
 }
 
+.grid {
+  position: relative;
+  margin-top: 15vh;
+  height: 50vh;
+  background-image: url(/img/grid.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid red;
+}
+
+.grid .pörssi {
+  position: absolute;
+  background-color: #03dac5;
+  width: 10px;
+  height: 10px;
+  color: pink;
+  border-radius: 50%;
+}
+
 .card-group {
   position: absolute;
-  top: 50%;
-  left: 10%;
+  top: 30%;
+  left: 5%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -webkit-transform: rotate(15deg);
@@ -185,12 +245,29 @@ section a {
   margin-bottom: 10px;
 }
 
-section.tumma i {
-  color: #ff0266;
-}
-
 footer {
   margin-top: 20px;
+}
+
+/* tummaversio */
+body.tumma {
+  background: black;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.toggle.tumma {
+  isolation: isolate;
+  position: relative;
+  height: 30px;
+  width: 60px;
+  border-radius: 15px;
+  overflow: hidden;
+  -webkit-box-shadow: -8px -4px 8px 0px #000000, 8px 4px 12px 0px #141414, 4px 4px 4px 0px #666668 inset, -4px -4px 4px 0px #0e0d0d inset;
+          box-shadow: -8px -4px 8px 0px #000000, 8px 4px 12px 0px #141414, 4px 4px 4px 0px #666668 inset, -4px -4px 4px 0px #0e0d0d inset;
+}
+
+section.tumma i {
+  color: #ff0266;
 }
 
 @media screen and (min-width: 900px) {
@@ -247,7 +324,7 @@ footer {
     font-family: "Nunito", sans-serif;
   }
   .name {
-    font-size: 0.7rem;
+    font-size: 1rem;
     left: 40px;
     bottom: 35px;
   }
