--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -1,4 +1,4 @@
-$transition-time: 0.3s;
+$transition-time: 0.5s;
 $prim-purple: #bb86fc;
 $prim-green: #03dac5;
 $prim-blue: #3700b3;
@@ -27,10 +27,7 @@ body {
 	background: whitesmoke;
 	color: black;
 	font-family: 'Montserrat', sans-serif;
-}
-body.tumma {
-	background: black;
-	color: rgba($color: #ffffff, $alpha: 0.6);
+	transition: $transition-time;
 }
 
 .container {
@@ -49,7 +46,7 @@ header {
 	justify-content: space-between;
 	flex-direction: row;
 	align-items: center;
-	background-image: url("/img/kansi.jpg");
+
 	background-position: center;
 	background-repeat: no-repeat;
 	img {
@@ -66,21 +63,77 @@ header {
 		background-color: $prim-purple;
 	}
 }
-.pörssi {
-	background-color: $prim-green;
-	width: 100px;
-	height: 100px;
-	color: pink;
-	border-radius: 50%;
+
+/* kytkin */
+.label {
+	display: inline-flex;
+	align-items: center;
+	cursor: pointer;
+	color: #394a56;
 }
+
+.label-text {
+	margin-left: 16px;
+}
+
+.toggle {
+	isolation: isolate;
+	position: relative;
+	height: 30px;
+	width: 60px;
+	border-radius: 15px;
+	overflow: hidden;
+	box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset,
+		-4px -4px 4px 0px #ffffff inset;
+}
+
+.toggle-state {
+	display: none;
+}
+
+.indicator {
+	height: 100%;
+	width: 200%;
+	background: $prim-green;
+	border-radius: 15px;
+	transform: translate3d(-75%, 0, 0);
+	transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+	box-shadow: -2px -2px 8px 0px #039485, 4px 4px 12px 0px #029687;
+}
+
+.toggle-state:checked ~ .indicator {
+	transform: translate3d(25%, 0, 0);
+}
+
+/* Visa kortti */
 .kortti {
 	height: 90vh;
 }
 
+.grid {
+	position: relative;
+	margin-top: 15vh;
+	height: 50vh;
+	background-image: url(/img/grid.svg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border: 2px solid red;
+
+	.pörssi {
+		position: absolute;
+		background-color: $prim-green;
+		width: 10px;
+		height: 10px;
+		color: pink;
+		border-radius: 50%;
+	}
+}
+
 .card-group {
 	position: absolute;
-	top: 50%;
-	left: 10%;
+	top: 30%;
+	left: 5%;
 	transform: translate(-50%, -50%);
 	transform: rotate(15deg);
 }
@@ -176,14 +229,32 @@ section {
 		margin-bottom: 10px;
 	}
 }
+
+footer {
+	margin-top: 20px;
+}
+
+/* tummaversio */
+
+body.tumma {
+	background: black;
+	color: rgba($color: #ffffff, $alpha: 0.6);
+}
+.toggle.tumma {
+	isolation: isolate;
+	position: relative;
+	height: 30px;
+	width: 60px;
+	border-radius: 15px;
+	overflow: hidden;
+	box-shadow: -8px -4px 8px 0px #000000, 8px 4px 12px 0px #141414, 4px 4px 4px 0px #666668 inset,
+		-4px -4px 4px 0px #0e0d0d inset;
+}
+
 section.tumma {
 	i {
 		color: $prim-red;
 	}
-}
-
-footer {
-	margin-top: 20px;
 }
 
 @media screen and (min-width: 900px) {
@@ -241,7 +312,7 @@ footer {
 	}
 
 	.name {
-		font-size: 0.7rem;
+		font-size: 1rem;
 		left: 40px;
 		bottom: 35px;
 	}
