--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -67,6 +66,7 @@ header {
   background: #e3f2fd;
   -webkit-box-shadow: 27px 27px 54px #8a949a, -27px -27px 54px #ffffff;
           box-shadow: 27px 27px 54px #8a949a, -27px -27px 54px #ffffff;
+  border-radius: 20px 20px 0 0;
 }
 
 header img {
@@ -144,24 +144,14 @@ header #mode {
 
 .grid {
   position: relative;
-  margin-top: 10vh;
-  height: 30vh;
-  background: #1e88e5;
-  background: radial-gradient(circle, #1e88e5 0%, #e3f2fd 59%);
-}
-
-.grid .pörssi {
-  position: absolute;
-  background-color: #03dac5;
-  width: 10px;
-  height: 10px;
-  color: pink;
-  border-radius: 50%;
+  height: 40vh;
+  background: #e3f2fd;
+  background: radial-gradient(circle, #10c97c 0%, RGBA(227, 242, 253, 1) 69%);
 }
 
 .card-group {
   position: absolute;
-  top: 30%;
+  top: 45%;
   left: 5%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -245,24 +235,28 @@ header #mode {
   right: 28px;
 }
 
+/* tervetuloa */
+.ml12 {
+  margin-top: 100px;
+  font-weight: 700;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: #03dac5;
+}
+
+.ml12 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
 /* buttonit */
 .btn {
   border-radius: 500px;
 }
 
-#special {
-  height: 130px;
-  width: 130px;
-  border-radius: 51% 49% 47% 53% / 17% 17% 83% 83%;
-  background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
-}
-
-#special a {
-  font-size: 0.8rem;
-  color: white;
-}
-
 .btn-group {
+  z-index: 100;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -285,9 +279,6 @@ header #mode {
 .btn-group .btn {
   border-radius: 0;
   font-size: 0.7rem;
-  background: #e3f2fd;
-  background: #afedea;
-  background: linear-gradient(45deg, #afedea 0%, #03dac5 100%);
 }
 
 /* sectionit alkaa */
@@ -416,7 +407,6 @@ footer h5 {
 footer i {
   font-size: 3rem;
   color: #18447e;
-  background: white;
   margin-top: 10px;
 }
 
