--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -79,6 +79,7 @@ header {
 	background-position: center;
 	background-repeat: no-repeat;
 	@include varjo-koholla();
+	border-radius: 20px 20px 0 0;
 	img {
 		width: 50px;
 		margin: 30px;
@@ -143,23 +144,16 @@ header {
 
 .grid {
 	position: relative;
-	margin-top: 10vh;
-	height: 30vh;
-	background: rgb(30, 136, 229);
-	background: radial-gradient(circle, rgba(30, 136, 229, 1) 0%, rgba(227, 242, 253, 1) 59%);
-	.pörssi {
-		position: absolute;
-		background-color: $prim-green;
-		width: 10px;
-		height: 10px;
-		color: pink;
-		border-radius: 50%;
-	}
+	height: 40vh;
+
+	background: $bg-color;
+
+	background: radial-gradient(circle, rgb(16, 201, 124) 0%, RGBA(227, 242, 253, 1) 69%);
 }
 
 .card-group {
 	position: absolute;
-	top: 30%;
+	top: 45%;
 	left: 5%;
 	transform: translate(-50%, -50%);
 	transform: rotate(15deg);
@@ -236,21 +230,28 @@ header {
 	bottom: 25px;
 	right: 28px;
 }
+/* tervetuloa */
+.ml12 {
+	margin-top: 100px;
+	font-weight: 700;
+	font-size: 1.8em;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	color: $prim-green;
+}
+
+.ml12 .letter {
+	display: inline-block;
+	line-height: 1em;
+}
+
 /* buttonit */
 .btn {
 	border-radius: 500px;
 }
-#special {
-	height: 130px;
-	width: 130px;
-	border-radius: 51% 49% 47% 53% / 17% 17% 83% 83%;
-	background: radial-gradient(circle at 65% 15%, white 1px, aqua 3%, darkblue 60%, aqua 100%);
-	a {
-		font-size: 0.8rem;
-		color: white;
-	}
-}
+
 .btn-group {
+	z-index: 100;
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -268,9 +269,6 @@ header {
 	.btn {
 		border-radius: 0;
 		font-size: 0.7rem;
-		background: rgb(227, 242, 253);
-		background: rgb(175, 237, 234);
-		background: linear-gradient(45deg, rgba(175, 237, 234, 1) 0%, rgba(3, 218, 197, 1) 100%);
 	}
 }
 
@@ -299,6 +297,7 @@ section {
 	}
 	#palvelumme {
 		@include varjo-koholla();
+
 		img {
 			max-width: 70%;
 		}
@@ -365,7 +364,7 @@ footer {
 	i {
 		font-size: 3rem;
 		color: #18447e;
-		background: white;
+
 		margin-top: 10px;
 	}
 }
